# Diffusion_pipe_in_ComfyUI_Win

./: .gitignore  .gitmodules  README.md  READMEChinese.md  __init__.py  examworkflow_DP.json  nodes.py  pyproject.toml  requirements.txt  train.py
diffusion_nodes/: GeneralDatasetConfig.py  __init__.py  advanced_train_config.py  dataset_tools.py  general_config.py  model_config.py  model_tools.py  output_dir_passthrough.py  start.py  train_monitor.py
input/: put_your_input_here.txt
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
models/: hunyuan_image.py  qwen_image.py
output/: you_can_cuustom_your_output_path.txt
output/123/20251008_18-05-43/: events.out.tfevents.1759946755.BEIMENPANYAN.30744.0  trainconfig.toml
submodules/HunyuanImage-2.1/: LICENSE  NOTICE
train_config/: main_example.toml  qwen_dataset.toml  qwen_edit_train.toml  qwen_image_24gb_vram.toml  qwen_t2i_train.toml  test_config.toml  wan2.2_i2v.toml
utils/: __init__.py  dataset.py
