[project]
name = "Diffusion_pipe_in_ComfyUI_Win"
description = "Diffusion-Pipe In ComfyUI Custom Node is a powerful extension plugin that provides complete Diffusion model training and fine-tuning capabilities for ComfyUI. This project allows users to configure and launch training for various advanced AI models within ComfyUI's graphical interface, supporting both LoRA and full fine-tuning, covering the most popular image generation and video generation models available today.You can train Qwen lora with 16g Vram"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# deepspeed==0.17.0", "toml", "transformers", "diffusers>=0.35.1", "datasets", "pillow", "sentencepiece", "protobuf", "peft", "torch-optimi", "tensorboard", "tqdm", "safetensors", "# bitsandbytes", "imageio[ffmpeg]", "av", "einops", "accelerate", "loguru", "# flash-attn==2.8.1", "omegaconf", "iopath", "termcolor", "hydra-core", "easydict", "ftfy", "pytorch-optimizer", "wandb", "optimum-quanto", "psutil"]

[project.urls]
Repository = "https://github.com/TianDongL/Diffusion_pipe_in_ComfyUI_Win"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/TianDongL/Diffusion_pipe_in_ComfyUI_Win/wiki"
"Bug Tracker" = "https://github.com/TianDongL/Diffusion_pipe_in_ComfyUI_Win/issues"

[tool.comfy]
PublisherId = "tiandong1234"
DisplayName = "Diffusion_pipe_in_ComfyUI_Win"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

